--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funda</title>
+    <link rel="icon" sizes="32x32" href="/assets/icon2.png">
+    <title>Huis te koop: Apollolaan</title>
 </head>
 <body>
     
