#8 linkjes onder kaart

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,4 +1,4 @@
-{% render 'partials/head.liquid', title: 'Funda' %}
+{% render 'partials/head.liquid', title: 'Huis te koop: Apollolaan' %}
 {% render 'partials/header.liquid' %}
 
 <body>
@@ -202,17 +202,7 @@
 
                     <span>Energielabel</span>
 
-                    <svg width="44" height="24" viewBox="0 0 44 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g clip-path="url(#clip0_2026_5441)">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 -0.00146484H31.4286L44 12.5176L31.4286 23.9985H0V-0.00146484Z" fill="#187428"/>
-                        <path d="M20.384 16.9985H18.864L17.92 14.6305H12.608L11.664 16.9985H10.144L14.432 6.32653H16.08L20.384 16.9985ZM17.52 13.4465L15.264 7.70253L12.992 13.4465H17.52Z" fill="white"/>
-                        </g>
-                        <defs>
-                        <clipPath id="clip0_2026_5441">
-                        <rect width="44" height="24" fill="white" transform="translate(0 -0.00146484)"/>
-                        </clipPath>
-                        </defs>
-                    </svg>
+                    <img src="/assets/energy-label.pngß">
 
                     <dd>Energielabel A</dd>
 
@@ -367,7 +357,7 @@
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M15.815 11.4534L10.5295 6.16736C10.238 5.87586 9.7605 5.87586 9.469 6.16736C9.177 6.45936 9.177 6.93636 9.469 7.22836L14.239 11.9979L9.469 16.7679C9.177 17.0599 9.177 17.5374 9.469 17.8289C9.7605 18.1209 10.238 18.1209 10.5295 17.8289L15.815 12.5434C15.8205 12.5379 15.8275 12.5369 15.833 12.5314C15.9795 12.3849 16.0515 12.1914 16.051 11.9979C16.0515 11.8049 15.9795 11.6114 15.833 11.4649C15.8275 11.4599 15.8205 11.4584 15.815 11.4534Z" fill="#0071B3"/>
                 </svg>
             </div>
-            
+
             <table>
                 <tr>
                     <th>Inwoners</th>
@@ -382,11 +372,20 @@
                     <td>€ 3.078</td>
                 </tr>
             </table>
-
         </article>
 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2437.2226894504543!2d4.879990576692972!3d52.34824624893146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609f65ebcbf19%3A0x156af697d4fe380d!2sApollolaan%2011%2C%201077%20AA%20Amsterdam!5e0!3m2!1snl!2snl!4v1749243620818!5m2!1snl!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div>
+            <a href="">
+                <img src="/assets/trailing.png" alt="afbeelding van 2 pijlen"> 
+                Open grotere kaart
+            </a>
 
+            <a href="">
+                <img src="/assets/left.png" alt="afbeelding van aanwijzer">
+                Bereken reistijd op Google Maps
+            </a>
+        </div>
     </main>
 
 
