--- a/views/partials/head.liquid
+++ b/views/partials/head.liquid
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" sizes="32x32" href="/assets/icon2.png">
+    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/styles/stylesheet.css">
     <title>Huis te koop: Apollolaan</title>
 </head>
 <body>
