--- a/views/index.liquid
+++ b/views/index.liquid
@@ -26,7 +26,6 @@
                 {% render 'partials/icons/room.liquid' %}
                 <p> {{huis.rooms}}</p>
                 
-                
                {% render 'partials/icons/electric.liquid' %}
                 <p>C</p>
             </section>
@@ -384,24 +383,15 @@
                 <p>€ 575.000 k.k.</p>
 
                 {% render 'partials/icons/oppervlakte.liquid' %}
-               
                 <p> {{ huis.m2_garden }} m²</p>
 
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.5 2.74854C21.5 2.33432 21.1642 1.99854 20.75 1.99854H3.25C2.83579 1.99854 2.5 2.33432 2.5 2.74854V21.2485C2.5 21.6627 2.83579 21.9985 3.25 21.9985H20.75C21.1642 21.9985 21.5 21.6627 21.5 21.2485V2.74854ZM4 7.24854H10.5V9.74854C10.5 10.1627 10.8358 10.4985 11.25 10.4985H15V20.4985H4V7.24854ZM16.5 9.74854C16.5 9.33432 16.1642 8.99854 15.75 8.99854H12V6.49854C12 6.08432 11.6642 5.74854 11.25 5.74854H4V3.49854H20V20.4985H16.5V9.74854Z" fill="#4D4D4D"/>
-                </svg>
+                {% render 'partials/icons/oppervlakte2.liquid' %}
                 <p> {{ huis.m2 }} m²</p>
 
-
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M20 9.99854L22 12.9985V17.7485C22 18.1627 21.6642 18.4985 21.25 18.4985H19.5V19.2485C19.5 19.6627 19.1642 19.9985 18.75 19.9985C18.3358 19.9985 18 19.6627 18 19.2485V18.4985H6V19.2485C6 19.6627 5.66421 19.9985 5.25 19.9985C4.83579 19.9985 4.5 19.6627 4.5 19.2485V18.4985H2.75C2.33579 18.4985 2 18.1627 2 17.7485V12.9985L4 9.99854V4.74854C4 4.33432 4.33579 3.99854 4.75 3.99854H19.25C19.6642 3.99854 20 4.33432 20 4.74854V9.99854ZM18.5 5.49854H5.5V8.49854H8.5V7.74854C8.5 7.33432 8.83579 6.99854 9.25 6.99854H14.75C15.1642 6.99854 15.5 7.33432 15.5 7.74854V8.49854H18.5V5.49854ZM5.5 9.99854L3.5 12.9985H20.5L18.5 9.99854H15.5V10.7485C15.5 11.1627 15.1642 11.4985 14.75 11.4985H9.25C8.83579 11.4985 8.5 11.1627 8.5 10.7485V9.99854H5.5ZM3.5 16.9985V14.4985H20.5V16.9985H3.5ZM10 8.49854V9.99854H14V8.49854H10Z" fill="#4D4D4D"/>
-                </svg>
+                {% render 'partials/icons/room.liquid' %}
                 <p> {{huis.rooms}}</p>
                 
-                
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.8376 6.44406L8.41164 12.9753L11.9275 13.7893L12.1735 17.7254L15.829 11.039L12.0738 10.2239L11.8376 6.44406ZM13.0625 1.99558L13.5002 8.99854L16.6369 9.67939C17.4472 9.85527 17.7847 10.5887 17.3868 11.3166L11.4775 22.1254C11.2129 22.6095 10.9723 22.5522 10.9379 22.0015L10.5002 14.9985L7.64332 14.3371C6.83705 14.1504 6.49345 13.403 6.87879 12.6684L12.5368 1.88187C12.7924 1.39471 13.0281 1.44493 13.0625 1.99558Z" fill="#4D4D4D"/>
-                </svg>
+                {% render 'partials/icons/electric.liquid' %}
                 <p>C</p>
             </section>
 
@@ -415,21 +405,14 @@
                 {% render 'partials/icons/oppervlakte.liquid' %}              
                 <p> {{ huis.m2_garden }} m²</p>
 
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.5 2.74854C21.5 2.33432 21.1642 1.99854 20.75 1.99854H3.25C2.83579 1.99854 2.5 2.33432 2.5 2.74854V21.2485C2.5 21.6627 2.83579 21.9985 3.25 21.9985H20.75C21.1642 21.9985 21.5 21.6627 21.5 21.2485V2.74854ZM4 7.24854H10.5V9.74854C10.5 10.1627 10.8358 10.4985 11.25 10.4985H15V20.4985H4V7.24854ZM16.5 9.74854C16.5 9.33432 16.1642 8.99854 15.75 8.99854H12V6.49854C12 6.08432 11.6642 5.74854 11.25 5.74854H4V3.49854H20V20.4985H16.5V9.74854Z" fill="#4D4D4D"/>
-                </svg>
+                {% render 'partials/icons/oppervlakte2.liquid' %}
                 <p> {{ huis.m2 }} m²</p>
 
 
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M20 9.99854L22 12.9985V17.7485C22 18.1627 21.6642 18.4985 21.25 18.4985H19.5V19.2485C19.5 19.6627 19.1642 19.9985 18.75 19.9985C18.3358 19.9985 18 19.6627 18 19.2485V18.4985H6V19.2485C6 19.6627 5.66421 19.9985 5.25 19.9985C4.83579 19.9985 4.5 19.6627 4.5 19.2485V18.4985H2.75C2.33579 18.4985 2 18.1627 2 17.7485V12.9985L4 9.99854V4.74854C4 4.33432 4.33579 3.99854 4.75 3.99854H19.25C19.6642 3.99854 20 4.33432 20 4.74854V9.99854ZM18.5 5.49854H5.5V8.49854H8.5V7.74854C8.5 7.33432 8.83579 6.99854 9.25 6.99854H14.75C15.1642 6.99854 15.5 7.33432 15.5 7.74854V8.49854H18.5V5.49854ZM5.5 9.99854L3.5 12.9985H20.5L18.5 9.99854H15.5V10.7485C15.5 11.1627 15.1642 11.4985 14.75 11.4985H9.25C8.83579 11.4985 8.5 11.1627 8.5 10.7485V9.99854H5.5ZM3.5 16.9985V14.4985H20.5V16.9985H3.5ZM10 8.49854V9.99854H14V8.49854H10Z" fill="#4D4D4D"/>
-                </svg>
+                {% render 'partials/icons/room.liquid' %}
                 <p> {{huis.rooms}}</p>
                 
-                
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.8376 6.44406L8.41164 12.9753L11.9275 13.7893L12.1735 17.7254L15.829 11.039L12.0738 10.2239L11.8376 6.44406ZM13.0625 1.99558L13.5002 8.99854L16.6369 9.67939C17.4472 9.85527 17.7847 10.5887 17.3868 11.3166L11.4775 22.1254C11.2129 22.6095 10.9723 22.5522 10.9379 22.0015L10.5002 14.9985L7.64332 14.3371C6.83705 14.1504 6.49345 13.403 6.87879 12.6684L12.5368 1.88187C12.7924 1.39471 13.0281 1.44493 13.0625 1.99558Z" fill="#4D4D4D"/>
-                </svg>
+                {% render 'partials/icons/electric.liquid' %}
                 <p>C</p>
             </section>
 
@@ -443,21 +426,13 @@
                 {% render 'partials/icons/oppervlakte.liquid' %}               
                 <p> {{ huis.m2_garden }} m²</p>
 
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.5 2.74854C21.5 2.33432 21.1642 1.99854 20.75 1.99854H3.25C2.83579 1.99854 2.5 2.33432 2.5 2.74854V21.2485C2.5 21.6627 2.83579 21.9985 3.25 21.9985H20.75C21.1642 21.9985 21.5 21.6627 21.5 21.2485V2.74854ZM4 7.24854H10.5V9.74854C10.5 10.1627 10.8358 10.4985 11.25 10.4985H15V20.4985H4V7.24854ZM16.5 9.74854C16.5 9.33432 16.1642 8.99854 15.75 8.99854H12V6.49854C12 6.08432 11.6642 5.74854 11.25 5.74854H4V3.49854H20V20.4985H16.5V9.74854Z" fill="#4D4D4D"/>
-                </svg>
+                {% render 'partials/icons/oppervlakte2.liquid' %}
                 <p> {{ huis.m2 }} m²</p>
 
-
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M20 9.99854L22 12.9985V17.7485C22 18.1627 21.6642 18.4985 21.25 18.4985H19.5V19.2485C19.5 19.6627 19.1642 19.9985 18.75 19.9985C18.3358 19.9985 18 19.6627 18 19.2485V18.4985H6V19.2485C6 19.6627 5.66421 19.9985 5.25 19.9985C4.83579 19.9985 4.5 19.6627 4.5 19.2485V18.4985H2.75C2.33579 18.4985 2 18.1627 2 17.7485V12.9985L4 9.99854V4.74854C4 4.33432 4.33579 3.99854 4.75 3.99854H19.25C19.6642 3.99854 20 4.33432 20 4.74854V9.99854ZM18.5 5.49854H5.5V8.49854H8.5V7.74854C8.5 7.33432 8.83579 6.99854 9.25 6.99854H14.75C15.1642 6.99854 15.5 7.33432 15.5 7.74854V8.49854H18.5V5.49854ZM5.5 9.99854L3.5 12.9985H20.5L18.5 9.99854H15.5V10.7485C15.5 11.1627 15.1642 11.4985 14.75 11.4985H9.25C8.83579 11.4985 8.5 11.1627 8.5 10.7485V9.99854H5.5ZM3.5 16.9985V14.4985H20.5V16.9985H3.5ZM10 8.49854V9.99854H14V8.49854H10Z" fill="#4D4D4D"/>
-                </svg>
+                {% render 'partials/icons/room.liquid' %}
                 <p> {{huis.rooms}}</p>
                 
-                
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.8376 6.44406L8.41164 12.9753L11.9275 13.7893L12.1735 17.7254L15.829 11.039L12.0738 10.2239L11.8376 6.44406ZM13.0625 1.99558L13.5002 8.99854L16.6369 9.67939C17.4472 9.85527 17.7847 10.5887 17.3868 11.3166L11.4775 22.1254C11.2129 22.6095 10.9723 22.5522 10.9379 22.0015L10.5002 14.9985L7.64332 14.3371C6.83705 14.1504 6.49345 13.403 6.87879 12.6684L12.5368 1.88187C12.7924 1.39471 13.0281 1.44493 13.0625 1.99558Z" fill="#4D4D4D"/>
-                </svg>
+                {% render 'partials/icons/electric.liquid' %}
                 <p>C</p>
             </section>
         </article>
