--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -14,9 +14,7 @@ nav {
     display: flex;
 }
 
-button {
-    all: unset;
-}
+
 
 ul {
     list-style: none;
@@ -69,7 +67,7 @@ a, .button-menu{
 
 /* MARK: main mediaviewer & info */
 
-h1 {
+.straat {
     font-family: var(--font-proxima-semibold);
     font-size: var(--font-size-xm);
     border-top: solid 1px var(--color-border);
@@ -171,8 +169,61 @@ h1 {
     font-family: var(--font-proxima-semibold);
     font-size: var(--font-size-xs);
     margin-left: .6em;
+    margin-top: 1em;
     &:hover {
         background-color: var(--color-light-grey-hover);
         cursor: pointer;
     }
+}
+
+.advertentie {
+    border-top: var(--border);
+    margin-top: .5em;
+    padding-left: .5em;
+    padding-bottom: .7em;
+    border-bottom: var(--border);
+    display: grid;
+    grid-template-columns: .95fr auto;
+    grid-template-rows: .6fr .4fr .8fr .5fr;
+    column-gap: .4em;
+}
+
+.logo-thuis-in-staal {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    padding-top: .5em;
+}
+.design-stalen-deur-h1 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    column-gap: .1em;
+}
+
+.design-stalen-deur-p {
+    grid-column: 1/2;
+    grid-row: 3/4;
+
+}
+
+.offerte {
+    grid-column: 1/2;
+    grid-row: 4/5;
+    max-width: 8em;
+    border: solid 1px var(--color-blue);
+    font-family: var(--font-proxima-regular);
+    font-size: var(--font-size-m);
+    color: var(--color-blue);
+    padding-left: .7em;
+    margin-top: .5em;
+}
+
+.image-staal {
+    grid-column: 2/3;
+    grid-row: 2/5;
+}
+
+/* MARK: description lists */
+
+.kenmerken {
+    padding: 1em 0 1em .4em;
 }
