#10 prijs duidelijker gemaakt

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -30,7 +30,7 @@
 
             <section class="adres">
 
-                <h1 class="straat"> {{ huis.street }}</h1>
+                <h1 class="straat"> {{ huis.street }} 11</h1>
                 <p class="tekst-postcode"> {{ huis.postal_code }} {{ huis.city }}</p>
                 <img class="image-kaart-adres" src="/assets/map.png">
             </section>
@@ -53,7 +53,7 @@
             </section>
 
             <section class="maandlasten">
-                <p class="tekst-price"> € {{ huis.price }} k.k. </p>
+                <p class="tekst-price">   € 3.250.000 k.k.  </p>
 
                 <a href="https://www.funda.nl/hypotheek/maandlasten/ing/?id=43923245">
                 {% render 'partials/icons/calculator.liquid' %}
@@ -365,7 +365,7 @@
             </table>
         </article>
 
-        {% comment %} <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2437.2226894504543!2d4.879990576692972!3d52.34824624893146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609f65ebcbf19%3A0x156af697d4fe380d!2sApollolaan%2011%2C%201077%20AA%20Amsterdam!5e0!3m2!1snl!2snl!4v1749243620818!5m2!1snl!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> {% endcomment %}
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2437.2226894504543!2d4.879990576692972!3d52.34824624893146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c609f65ebcbf19%3A0x156af697d4fe380d!2sApollolaan%2011%2C%201077%20AA%20Amsterdam!5e0!3m2!1snl!2snl!4v1749243620818!5m2!1snl!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
         <div>
             <a href="">
                 <img src="/assets/trailing.png" alt="afbeelding van 2 pijlen"> 
